init api monitor vm with prometheus
