# internal/server/handler/vm.go
@@ -1,0 +1,36 @@
+package handler
+
+import (
+	"net/http"
+
+	"github.com/quanNaNbk03/monitor-demo/internal/server/service"
+	"github.com/quanNaNbk03/monitor-demo/pkg/api/vm"
+
+	"github.com/gin-gonic/gin"
+
+	"git.ocn.com.vn/ocn/common/httpbase"
+)
+
+// VMHandler implements the vm.ServerInterface generated by oapi-codegen
+type VMHandler struct {
+	monitorVMService service.MonitorVMService
+}
+
+// NewVMHandler creates a new health handler
+func NewVMHandler(monitorVMService service.MonitorVMService) *VMHandler {
+	return &VMHandler{
+		monitorVMService: monitorVMService,
+	}
+}
+
+// Ensure VMHandler implements vm.ServerInterface
+var _ vm.ServerInterface = (*VMHandler)(nil)
+
+func (h *VMHandler) GetMonitorVMWithProm(c *gin.Context, id uint64, metricType vm.VMMetricType, params vm.GetMonitorVMWithPromParams) {
+	res, ierr := h.monitorVMService.GetMonitorVMByType(c.Request.Context(), id, metricType, params)
+	if ierr != nil {
+		httpbase.ReturnErrorResponse(c, ierr)
+		return
+	}
+	httpbase.ReturnSuccessResponse(c, http.StatusOK, res)
+}
