# pkg/api/vm/vm.gen.go
@@ -1,0 +1,191 @@
+// Package vm provides primitives to interact with the openapi HTTP API.
+//
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.8.0 DO NOT EDIT.
+package vm
+
+import (
+	"fmt"
+	"net/http"
+
+	"github.com/gin-gonic/gin"
+	"github.com/oapi-codegen/runtime"
+	"github.com/quanNaNbk03/monitor-demo/internal/server/dto"
+)
+
+// Defines values for VMMetricType.
+const (
+	Cpu            VMMetricType = "cpu"
+	DiskBytes      VMMetricType = "diskBytes"
+	DiskOps        VMMetricType = "diskOps"
+	Memory         VMMetricType = "memory"
+	NetworkBits    VMMetricType = "networkBits"
+	NetworkPackets VMMetricType = "networkPackets"
+)
+
+// Valid indicates whether the value is a known member of the VMMetricType enum.
+func (e VMMetricType) Valid() bool {
+	switch e {
+	case Cpu:
+		return true
+	case DiskBytes:
+		return true
+	case DiskOps:
+		return true
+	case Memory:
+		return true
+	case NetworkBits:
+		return true
+	case NetworkPackets:
+		return true
+	default:
+		return false
+	}
+}
+
+// Error defines model for Error.
+type Error struct {
+	Error struct {
+		Code    string `json:"code,omitempty"`
+		Detail  string `json:"detail,omitempty"`
+		Message string `json:"message,omitempty"`
+		Name    string `json:"name,omitempty"`
+	} `json:"error,omitempty"`
+}
+
+// Monitor defines model for Monitor.
+type Monitor = dto.Monitor
+
+// MonitorTarget defines model for MonitorTarget.
+type MonitorTarget = dto.MonitorTarget
+
+// MonitorTargetData defines model for MonitorTargetData.
+type MonitorTargetData = dto.MonitorTargetData
+
+// VMMetricType defines model for VMMetricType.
+type VMMetricType string
+
+// ErrorResponse401 defines model for ErrorResponse401.
+type ErrorResponse401 = Error
+
+// ErrorResponse403 defines model for ErrorResponse403.
+type ErrorResponse403 = Error
+
+// ErrorResponse404 defines model for ErrorResponse404.
+type ErrorResponse404 = Error
+
+// ErrorResponse500 defines model for ErrorResponse500.
+type ErrorResponse500 = Error
+
+// GetMonitorVMWithPromParams defines parameters for GetMonitorVMWithProm.
+type GetMonitorVMWithPromParams struct {
+	Start int64 `form:"start" json:"start"`
+	End   int64 `form:"end" json:"end"`
+	Step  int64 `form:"step,omitempty" json:"step,omitempty"`
+}
+
+// ServerInterface represents all server handlers.
+type ServerInterface interface {
+	// GetMonitorVMWithProm Get VM monitor by metricType with prometheus
+	// (GET /api/v1/vms/{id}/prometheus/{metricType})
+	GetMonitorVMWithProm(c *gin.Context, id uint64, metricType VMMetricType, params GetMonitorVMWithPromParams)
+}
+
+// ServerInterfaceWrapper converts contexts to parameters.
+type ServerInterfaceWrapper struct {
+	Handler            ServerInterface
+	HandlerMiddlewares []MiddlewareFunc
+	ErrorHandler       func(*gin.Context, error, int)
+}
+
+type MiddlewareFunc func(c *gin.Context)
+
+// GetMonitorVMWithProm operation middleware
+func (siw *ServerInterfaceWrapper) GetMonitorVMWithProm(c *gin.Context) {
+
+	var err error
+	_ = err
+
+	// ------------- Path parameter "id" -------------
+	var id uint64
+
+	err = runtime.BindStyledParameterWithOptions("simple", "id", c.Param("id"), &id, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true, Type: "integer", Format: "uint64", ValueIsUnescaped: true})
+	if err != nil {
+		siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter id: %w", err), http.StatusBadRequest)
+		return
+	}
+
+	// ------------- Path parameter "metricType" -------------
+	var metricType VMMetricType
+
+	err = runtime.BindStyledParameterWithOptions("simple", "metricType", c.Param("metricType"), &metricType, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true, Type: "string", Format: "", ValueIsUnescaped: true})
+	if err != nil {
+		siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter metricType: %w", err), http.StatusBadRequest)
+		return
+	}
+
+	// Parameter object where we will unmarshal all parameters from the context
+	var params GetMonitorVMWithPromParams
+
+	// ------------- Required query parameter "start" -------------
+
+	err = runtime.BindQueryParameterWithOptions("form", true, true, "start", c.Request.URL.Query(), &params.Start, runtime.BindQueryParameterOptions{Type: "integer", Format: "int64"})
+	if err != nil {
+		siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter start: %w", err), http.StatusBadRequest)
+		return
+	}
+
+	// ------------- Required query parameter "end" -------------
+
+	err = runtime.BindQueryParameterWithOptions("form", true, true, "end", c.Request.URL.Query(), &params.End, runtime.BindQueryParameterOptions{Type: "integer", Format: "int64"})
+	if err != nil {
+		siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter end: %w", err), http.StatusBadRequest)
+		return
+	}
+
+	// ------------- Optional query parameter "step" -------------
+
+	err = runtime.BindQueryParameterWithOptions("form", true, false, "step", c.Request.URL.Query(), &params.Step, runtime.BindQueryParameterOptions{Type: "integer", Format: "int64"})
+	if err != nil {
+		siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter step: %w", err), http.StatusBadRequest)
+		return
+	}
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		middleware(c)
+		if c.IsAborted() {
+			return
+		}
+	}
+
+	siw.Handler.GetMonitorVMWithProm(c, id, metricType, params)
+}
+
+// GinServerOptions provides options for the Gin server.
+type GinServerOptions struct {
+	BaseURL      string
+	Middlewares  []MiddlewareFunc
+	ErrorHandler func(*gin.Context, error, int)
+}
+
+// RegisterHandlers creates http.Handler with routing matching OpenAPI spec.
+func RegisterHandlers(router gin.IRouter, si ServerInterface) {
+	RegisterHandlersWithOptions(router, si, GinServerOptions{})
+}
+
+// RegisterHandlersWithOptions creates http.Handler with additional options
+func RegisterHandlersWithOptions(router gin.IRouter, si ServerInterface, options GinServerOptions) {
+	errorHandler := options.ErrorHandler
+	if errorHandler == nil {
+		errorHandler = func(c *gin.Context, err error, statusCode int) {
+			c.JSON(statusCode, gin.H{"msg": err.Error()})
+		}
+	}
+
+	wrapper := ServerInterfaceWrapper{
+		Handler:            si,
+		HandlerMiddlewares: options.Middlewares,
+		ErrorHandler:       errorHandler,
+	}
+
+	router.GET(options.BaseURL+"/api/v1/vms/:id/prometheus/:metricType", wrapper.GetMonitorVMWithProm)
+}
